<resources>
    <string name="title_application_name">Status Hukum</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="activity_dashboard_toolbar_logo_title">Status Hukum</string>
    <string name="activity_dashboard_toolbar_logo_desc">Logo Desc</string>
    <string name="activity_constitution_menu_sync">Sync</string>
    <string name="activity_constitution_menu_setting">Pengaturan</string>
    <string name="title_activity_setting">Pengaturan</string>
    <string name="content_constitution_spinner_century_chooser">Abad</string>
    <string name="content_constitution_recycler_view_item_count" formatted="true">Status Hukum : %3d</string>
    <string name="title_activity_year">Year</string>
    <string name="activity_year_menu_sync">Sync</string>
    <string name="activity_year_menu_setting">Pengaturan</string>
    <string name="content_dashboard_recycler_view_item_no_entry_message" formatted="true">Tidak ada status hukum pada tahun %d</string>
    <string name="activity_year_toolbar_logo_title">Status Hukum</string>
    <string name="activity_year_toolbar_logo_desc">Logo Desc</string>
    <string name="title_activity_detail">Detail</string>
    <string name="activity_detail_toolbar_logo_desc">Logo Desc</string>
    <string name="activity_detail_toolbar_logo_title">Status Hukum</string>
    <string name="activity_detail_menu_sync">Sync</string>
    <string name="activity_detail_menu_setting">Pengaturan</string>
    <string name="content_detail_tv_no_label">Nomor</string>
    <string name="content_detail_tv_year_label">Tahun</string>
    <string name="content_detail_tv_description_label">Tentang</string>
    <string name="content_detail_tv_tag_label">Label Pendukung</string>
    <string name="content_detail_tv_status_label">Status</string>
    <string name="content_setting_s_show_label_desc">Hanya menampilkan tahun yang memiliki data status hukum saja</string>
    <string name="content_setting_s_show_label">Tampilkan Yang Ada</string>
    <string name="content_setting_s_sync_label_desc">Menyinkronkan data dari server</string>
    <string name="content_setting_s_sync_label">Sinkron</string>
    <string name="content_setting_s_deep_sync_label_desc_1">Membutuhkan paket data yang besar</string>
    <string name="content_setting_s_deep_sync_label_desc_0">Menghapus semua data dan menyinkronkan secara total data dari server</string>
    <string name="content_setting_s_deep_sync_label">Total Sinkron</string>
    <string name="system_setting_server_version_error">Tidak dapat mengambil data dari server</string>
    <string name="system_setting_server_version_success">Update Berhasil</string>
    <string name="system_setting_server_version_equal">Versi data sudah sama</string>
    <string name="activity_constitution_menu_refresh">Refresh</string>
    <string name="activity_year_menu_refresh">Refresh</string>
    <string name="content_setting_s_mailto_label">Saran</string>
    <string name="content_setting_s_mailto_label_desc">Kirimkan saran kepada pengembang</string>
    <string name="activity_setting_mailto_receipt">fajaradhy@ymail.com</string>
    <string name="activity_setting_mailto_subject">Status Hukum Feedback</string>
    <string name="activity_setting_mailto_content">Saya memberikan saran untuk aplikasi ini</string>
    <string name="activity_constitution_menu_search">Cari</string>
    <string name="activity_year_menu_search">Cari</string>
    <string name="title_activity_search">Search</string>
    <string name="activity_search_toolbar_logo_desc">Logo Desc</string>
    <string name="activity_search_toolbar_logo_title">Status Hukum</string>
    <string name="activity_search_menu_setting">Pengaturan</string>
    <string name="activity_search_menu_refresh">Refresh</string>
    <string name="activity_search_info_search_empty">Tidak Ada Hasil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Pengaturan</string>
    <string name="nav_header_dashboard_logo_title">Status Hukum</string>
    <string name="nav_header_dashboard_logo_desc">Logo Desc</string>
    <string name="nav_header_dashboard_drawer_group_rule">Peraturan</string>
    <string name="nav_header_dashboard_drawer_group_technical">Teknis</string>
    <string name="nav_header_dashboard_drawer_rule_tap_mpr">TAP MPR</string>
    <string name="nav_header_dashboard_drawer_rule_uu">UU</string>
    <string name="nav_header_dashboard_drawer_rule_uu_darurat">UU DARURAT</string>
    <string name="nav_header_dashboard_drawer_rule_perpu">PERPU</string>
    <string name="nav_header_dashboard_drawer_rule_pp">PP</string>
    <string name="nav_header_dashboard_drawer_rule_perpres">PERPRES</string>
    <string name="nav_header_dashboard_drawer_technical_setting">Pengaturan</string>
    <string name="activity_govrn_rule_toolbar_logo_desc">Logo Desc</string>
    <string name="activity_govrn_rule_toolbar_logo_title">Peraturan Pemerintah</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="hello_blank_fragment_constitution">Hello blank fragment Constitution</string>
    <string name="hello_blank_fragment_govrn_rule">Government Rule</string>
    <string name="content_detail_button_open">Buka</string>
    <string name="content_detail_button_download">Download</string>
    <string name="title_activity_pdfviewer">PDFViewer</string>
    <string name="activity_pdf_viewer_toolbar_logo_desc">Logo Desc</string>
    <string name="activity_pdf_viewer_toolbar_logo_title">Status Hukum</string>
    <string name="content_detail_button_update">Update</string>
    <string name="global_content_description">Desc</string>
    <string name="conten_setting_header_data_title">Data</string>
    <string name="content_setting_header_social_title">Sosial Media</string>
    <string name="content_setting_tv_facebook_label">Facebook</string>
    <string name="content_setting_tv_facebook_label_desc">Kirimkan saran melewati Facebook</string>
    <string name="content_setting_tv_twitter_label">Twitter</string>
    <string name="content_setting_tv_twitter_label_desc">Kirimkan saran melewati Twitter</string>
    <string name="content_setting_tv_instagram_label">Instagram</string>
    <string name="content_setting_tv_instagram_label_desc">Kirimkan saran melewati Instagram</string>
    <string name="content_setting_tv_gplus_label">Google Plus</string>
    <string name="content_setting_tv_gplus_label_desc">Kirimkan saran melewati Google Plus</string>
    <string name="global_social_app_chooser_title">Pilih aplikasi untuk melanjutkan</string>
    <string name="global_content_follow_label">Follow us on:</string>
    <string name="request">Request</string>
</resources>
