<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_dashboard_search"
            android:icon="@drawable/ic_search"
            android:title="@string/content_setting_s_search"/>

        <item
            android:id="@+id/nav_menu_dashboard_sync"
            android:icon="@drawable/ic_sync_black_24"
            android:title="@string/content_setting_s_sync_label"/>

        <item
            android:id="@+id/nav_menu_dashboard_about"
            android:icon="@drawable/ic_user_alt_solid_24"
            android:iconTint="@color/black"
            android:title="@string/content_setting_s_about"/>
    </group>

    <item android:title="@string/nav_header_dashboard_drawer_group_rule">
        <menu>
            <item
                android:id="@+id/nav_menu_dashboard_rule_uu"
                android:icon="@drawable/ic_scale_balance_black_24"
                android:title="@string/nav_header_dashboard_drawer_rule_uu"/>
            <item
                android:id="@+id/nav_menu_dashboard_rule_tap_mpr"
                android:icon="@drawable/ic_scale_balance_black_24"
                android:title="@string/nav_header_dashboard_drawer_rule_tap_mpr"/>
            <item
                android:id="@+id/nav_menu_dashboard_rule_uu_darurat"
                android:icon="@drawable/ic_scale_balance_black_24"
                android:title="@string/nav_header_dashboard_drawer_rule_uu_darurat"/>
            <item
                android:id="@+id/nav_menu_dashboard_rule_perpu"
                android:icon="@drawable/ic_scale_balance_black_24"
                android:title="@string/nav_header_dashboard_drawer_rule_perpu"/>
            <item
                android:id="@+id/nav_menu_dashboard_rule_pp"
                android:icon="@drawable/ic_scale_balance_black_24"
                android:title="@string/nav_header_dashboard_drawer_rule_pp"/>
            <item
                android:id="@+id/nav_menu_dashboard_rule_perpres"
                android:icon="@drawable/ic_scale_balance_black_24"
                android:title="@string/nav_header_dashboard_drawer_rule_perpres"/>
        </menu>
    </item>

</menu>
