<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".controller.year">
    <item
        android:id="@+id/activity_year_menu_sync"
        android:orderInCategory="0"
        android:title="@string/activity_year_menu_sync"
        app:showAsAction="never"/>

    <item
        android:id="@+id/activity_year_menu_setting"
        android:orderInCategory="1"
        android:title="@string/activity_year_menu_setting"
        app:showAsAction="never"/>

    <item
        android:id="@+id/activity_year_menu_refresh"
        android:orderInCategory="2"
        android:title="@string/activity_year_menu_refresh"
        app:showAsAction="never"
        />
</menu>
